--- a/guesswhat.html
+++ b/guesswhat.html
@@ -4,14 +4,21 @@
     <title>Guess what!</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="app.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js"></script>
-
     <script src="guess.js"></script>
 </head>
 <body ng-controller="MainCtrl">
+    <div class="overlay" ng-show="ShowOverlay">
+        <div class="center-block text-center">
+            <h2>Get ready and </h2>
+            <button ng-click="Start()" ng-hide="IsRunning()" class="btn btn-default  btn-lg">GO!!</button>
+        </div>
+    </div>
     <div>
+
 
         <div>
             <div class="center-block row">
@@ -33,7 +40,5 @@
         <span>Pending: {{GetPendingCount()}}</span>
         <span>Skipped: {{GetSkippedCount()}}</span>
     </div>
-    <button ng-click="Start()" ng-hide="IsRunning()">Start</button>
-    <button ng-click="Stop()" ng-show="IsRunning()">Stop</button>
 </body>
 </html>
