--- a/guesswhat.html
+++ b/guesswhat.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js"></script>
     <script src="guess.js"></script>
 </head>
-<body ng-controller="MainCtrl">
+<body ng-controller="MainCtrl" class="center-block">
     <div class="overlay" ng-hide="IsRunning()">
         <div class="center-block text-center">
             <h2>Get ready and </h2>
@@ -58,21 +58,38 @@
         </div>
         <div class="center-block row" id="main-container">
             <div>
-                <div>
 
-                </div>
-                <span ng-show="current!=null">{{current}}</span>
-                <span ng-show="current==null">All done!</span>
+                <h1 class="word">{{current}}</h1>
 
-                <button ng-click="MoveNext()" type="button" class="btn btn-success btn-lg">Move Next</button>
-                <button ng-click="Skip()" type="button" class="btn btn-warning btn-lg">Skip</button>
+
+                <button ng-click="MoveNext()" type="button" class="btn btn-default btn-lg">Next</button>
+                <button ng-click="Skip()" type="button" class="btn btn-default btn-lg">Skip</button>
 
             </div>
         </div>
         <div class="center-block row" id="foot-container">
-            <span>Completed: {{GetCompletedCount()}}</span>
-            <span>Pending: {{GetPendingCount()}}</span>
-            <span>Skipped: {{GetSkippedCount()}}</span>
+            <div class="row">
+                <div class="col-xs-offset-6 col-xs-2">
+                    <p class="tag">Completed</p>
+                </div>
+                <div class="col-xs-2">
+                    <p class="tag">Remaing</p>
+                </div>
+                <div class="col-xs-2">
+                    <p class="tag">Skipped</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-offset-6 col-xs-2 box">
+                    <p class="score">{{GetCompletedCount()}}</p>
+                </div>
+                <div class="col-xs-2 box">
+                    <p class="score">{{GetPendingCount()}}</p>
+                </div>
+                <div class="col-xs-2 box">
+                    <p class="score">{{GetSkippedCount()}}</p>
+                </div>
+            </div>
         </div>
     </div>
 
