--- a/guesswhat.html
+++ b/guesswhat.html
@@ -1,101 +1,86 @@
-﻿<!DOCTYPE html>
-<html lang="en" ng-app="guessApp">
-<head>
-    <title>Guess what!</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="app.css">
+﻿<div class="overlay" ng-hide="IsRunning()">
+    <div class="center-block text-center">
+        <h2>Get ready and </h2>
+        <button ng-click="Start()" class="btn btn-default btn-block btn-lg">GO!!</button>
+    </div>
+</div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js"></script>
-    <script src="guess.js"></script>
-</head>
-<body ng-controller="MainCtrl" class="center-block">
-    <div class="overlay" ng-hide="IsRunning()">
-        <div class="center-block text-center">
-            <h2>Get ready and </h2>
-            <button ng-click="Start()" class="btn btn-default btn-block btn-lg">GO!!</button>
+<div class="overlay" ng-show="IsCompleted()">
+    <div class="center-block text-center">
+        <h2>All completed with {{seconds}} seconds.</h2>
+
+        <div class="row">
+            <div class="col-xs-4 score">
+                <p class="tag">Completed</p>
+            </div>
+            <div class="col-xs-4 col-xs-offset-4 score">
+                <p class="tag">Skipped</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-4 score completed">
+                <p class="score">{{GetCompletedCount()}}</p>
+            </div>
+            <div class="col-xs-4 col-xs-offset-4 score skipped">
+                <p class="score">{{GetSkippedCount()}}</p>
+            </div>
+        </div>
+
+        <h4><a ng-href="#/category">Try another category</a></h4>
+
+    </div>
+</div>
+
+<div class="page center-block" ng-hide="showoverlay">
+    <div class="center-block row" id="clock-container">
+        <div class="col-md-4 time-digits seperate">
+            <div>{{GetHours() | limitTo:1}}</div>
+            <div>{{GetHours() | limitTo:-1}}</div>
+            <div>:</div>
+        </div>
+        <div class="col-md-4 time-digits seperate">
+            <div>{{GetMinutes()| limitTo:1}}</div>
+            <div>{{GetMinutes()| limitTo:-1}}</div>
+            <div>:</div>
+        </div>
+        <div class="col-md-4 time-digits">
+            <div>{{GetSeconds()| limitTo:1}}</div>
+            <div>{{GetSeconds()| limitTo:-1}}</div>
         </div>
     </div>
+    <div class="center-block row" id="main-container">
+        <div>
 
-    <div class="overlay" ng-show="IsCompleted()">
-        <div class="center-block text-center">
-            <h2>All completed with {{seconds}} seconds. Refresh to try again</h2>
-            <div class="row">
-                <div class="col-xs-4 score">
-                    <p class="tag">Completed</p>
-                </div>
-                <div class="col-xs-4 col-xs-offset-4 score">
-                    <p class="tag">Skipped</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-4 score completed">
-                    <p class="score">{{GetCompletedCount()}}</p>
-                </div>
-                <div class="col-xs-4 col-xs-offset-4 score skipped">
-                    <p class="score">{{GetSkippedCount()}}</p>
-                </div>
-            </div>
+            <h1 class="word">{{current}}</h1>
+
+
+            <button ng-click="MoveNext()" type="button" class="btn btn-default btn-lg">Next</button>
+            <button ng-click="Skip()" type="button" class="btn btn-default btn-lg">Skip</button>
 
         </div>
     </div>
-
-    <div class="page center-block" ng-hide="showoverlay">
-        <div class="center-block row" id="clock-container">
-            <div class="col-md-4 time-digits seperate">
-                <div>{{GetHours() | limitTo:1}}</div>
-                <div>{{GetHours() | limitTo:-1}}</div>
-                <div>:</div>
+    <div class="center-block row" id="foot-container">
+        <div class="row">
+            <div class="col-xs-offset-6 col-xs-2">
+                <p class="tag">Completed</p>
             </div>
-            <div class="col-md-4 time-digits seperate">
-                <div>{{GetMinutes()| limitTo:1}} </div>
-                <div>{{GetMinutes()| limitTo:-1}} </div>
-                <div>:</div>
+            <div class="col-xs-2">
+                <p class="tag">Remaing</p>
             </div>
-            <div class="col-md-4 time-digits">
-                <div>{{GetSeconds()| limitTo:1}}</div>
-                <div>{{GetSeconds()| limitTo:-1}} </div>
+            <div class="col-xs-2">
+                <p class="tag">Skipped</p>
             </div>
         </div>
-        <div class="center-block row" id="main-container">
-            <div>
-
-                <h1 class="word">{{current}}</h1>
-
-
-                <button ng-click="MoveNext()" type="button" class="btn btn-default btn-lg">Next</button>
-                <button ng-click="Skip()" type="button" class="btn btn-default btn-lg">Skip</button>
-
+        <div class="row">
+            <div class="col-xs-offset-6 col-xs-2 box">
+                <p class="score">{{GetCompletedCount()}}</p>
             </div>
-        </div>
-        <div class="center-block row" id="foot-container">
-            <div class="row">
-                <div class="col-xs-offset-6 col-xs-2">
-                    <p class="tag">Completed</p>
-                </div>
-                <div class="col-xs-2">
-                    <p class="tag">Remaing</p>
-                </div>
-                <div class="col-xs-2">
-                    <p class="tag">Skipped</p>
-                </div>
+            <div class="col-xs-2 box">
+                <p class="score">{{GetPendingCount()}}</p>
             </div>
-            <div class="row">
-                <div class="col-xs-offset-6 col-xs-2 box">
-                    <p class="score">{{GetCompletedCount()}}</p>
-                </div>
-                <div class="col-xs-2 box">
-                    <p class="score">{{GetPendingCount()}}</p>
-                </div>
-                <div class="col-xs-2 box">
-                    <p class="score">{{GetSkippedCount()}}</p>
-                </div>
+            <div class="col-xs-2 box">
+                <p class="score">{{GetSkippedCount()}}</p>
             </div>
         </div>
     </div>
-
-
-
-</body>
-</html>
+</div>
