replace ng-click with ng-dblclick to avoid accidently clicking

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                         <p class="word">{{current}}</p>
                     </div>
                     <div class="button-group">
-                        <span class="glyphicon glyphicon-ok" aria-hidden="true" ng-click="MoveNext()"></span>
-                        <span class="glyphicon glyphicon-remove" aria-hidden="true" ng-click="Skip()"></span>
+                        <span class="glyphicon glyphicon-ok" aria-hidden="true" ng-dblclick="MoveNext()"></span>
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true" ng-dblclick="Skip()"></span>
                     </div>
                 </div>
 
