--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
             <div class="center-block content container-fluid body-content">
                 <div class="jumbotron center-block" ng-hide="IsCompleted()">
-                    <div class="word-container center-block">
+                    <div class="word-container center-block" style="box-shadow: 10px 10px 25px 0px {{rgb()}}">
                         <p class="word">{{current}}</p>
                     </div>
                     <div class="button-group">
