add rules for one piece mode

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 
                     <p>Arcade Mode</p>
                     <p>There will be 20 words and 4 minutes. You can skip as many as you like. Team correctly guessed most words wins.</p>
+
+                    <p>One Piece Mode</p>
+                    <p>There will be plenty of words and 90 seconds. Team correctly guessed most words wins. Each successfully guess will earn extra 15 seconds, each skip will cost 30 seconds.</p>
                 </div>
             </div>
 
