--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="app.css">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js"></script>
@@ -121,6 +121,7 @@
                     <div class="button-group">
                         <span class="glyphicon glyphicon-ok" aria-hidden="true" ng-click="MoveNext()"></span>
                         <span class="glyphicon glyphicon-remove" aria-hidden="true" ng-click="Skip()"></span>
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true" ng-click="Skip(1)"></span>
                     </div>
                 </div>
 
